crates/stdlib/src/snapshots/rustpython_stdlib___opcode__tests__bare_function_annotations_check_attribute_and_subscript_expressions.snap
---
source: crates/stdlib/src/_opcode.rs
assertion_line: 318
expression: "dis(r#\"\ndef f(one: int):\n    int.new_attr: int\n    [list][0].new_attr: [int, str]\n    my_lst = [1]\n    my_lst[one]: int\n    return my_lst\n\"#)"
---
  0           RESUME                   0

  1           LOAD_CONST               0 (<code object __annotate__ at 0xdeadbeef, file "<?>", line 1>)
              MAKE_FUNCTION
              LOAD_CONST               1 (<code object f at 0xdeadbeef, file "<?>", line 1>)
              MAKE_FUNCTION
              SET_FUNCTION_ATTRIBUTE  16 (annotate)
              STORE_NAME               0 (f)
              LOAD_COMMON_CONSTANT     7 (None)
              RETURN_VALUE

Disassembly of <code object __annotate__ at 0xdeadbeef, file "<?>", line 1>:
  1           RESUME                   0
              LOAD_FAST_BORROW         0 (format)
              LOAD_SMALL_INT           2
              COMPARE_OP             132 (>)
              POP_JUMP_IF_FALSE        3 (to L1)
              NOT_TAKEN
              LOAD_COMMON_CONSTANT     1 (NotImplementedError)
              RAISE_VARARGS            1
      L1:     LOAD_CONST               1 ('one')
              LOAD_GLOBAL              0 (int)
              BUILD_MAP                1
              RETURN_VALUE

Disassembly of <code object f at 0xdeadbeef, file "<?>", line 1>:
  1           RESUME                   0

  2           LOAD_GLOBAL              0 (int)
              POP_TOP

  3           LOAD_GLOBAL              2 (list)
              BUILD_LIST               1
              LOAD_SMALL_INT           0
              BINARY_OP               26 ([])
              POP_TOP

  4           LOAD_SMALL_INT           1
              BUILD_LIST               1
              STORE_FAST               1 (my_lst)

  5           LOAD_FAST_BORROW         1 (my_lst)
              POP_TOP
              LOAD_FAST_BORROW         0 (one)
              POP_TOP

  6           LOAD_FAST_BORROW         1 (my_lst)
              RETURN_VALUE
