crates/stdlib/src/snapshots/rustpython_stdlib___opcode__tests__const_no_op.snap
---
source: crates/stdlib/src/_opcode.rs
assertion_line: 281
expression: "dis(r#\"\nx = not True\n\"#)"
---
  0           RESUME                   0

  1           LOAD_COMMON_CONSTANT    10 (False)
              STORE_NAME               0 (x)
              LOAD_COMMON_CONSTANT     7 (None)
              RETURN_VALUE
