crates/stdlib/src/snapshots/rustpython_stdlib___opcode__tests__constant_true_if_pass_keeps_line_anchor_nop.snap
---
source: crates/stdlib/src/_opcode.rs
assertion_line: 290
expression: "dis(r#\"\nif 1:\n    pass\n\"#)"
---
  0           RESUME                   0

  1           NOP

  2           LOAD_COMMON_CONSTANT     7 (None)
              RETURN_VALUE
