crates/stdlib/src/snapshots/rustpython_stdlib___opcode__tests__if_ands.snap
---
source: crates/stdlib/src/_opcode.rs
assertion_line: 252
expression: "dis(r#\"\nif True and False and False:\n    pass\n\"#)"
---
  0           RESUME                   0

  1           LOAD_COMMON_CONSTANT     7 (None)
              RETURN_VALUE
