crates/stdlib/src/snapshots/rustpython_stdlib___opcode__tests__if_mixed.snap
---
source: crates/stdlib/src/_opcode.rs
assertion_line: 262
expression: "dis(r#\"\nif (True and False) or (False and True):\n    pass\n\"#)"
---
  0           RESUME                   0

  1           LOAD_COMMON_CONSTANT     7 (None)
              RETURN_VALUE
