crates/stdlib/src/snapshots/rustpython_stdlib___opcode__tests__if_ors.snap
---
source: crates/stdlib/src/_opcode.rs
assertion_line: 242
expression: "dis(r#\"\nif True or False or False:\n    pass\n\"#)"
---
  0           RESUME                   0

  1           NOP

  2           LOAD_COMMON_CONSTANT     7 (None)
              RETURN_VALUE
