crates/stdlib/src/snapshots/rustpython_stdlib___opcode__tests__nested_bool_op.snap
---
source: crates/stdlib/src/_opcode.rs
assertion_line: 272
expression: "dis(r#\"\nx = Test() and False or False\n\"#)"
---
  0           RESUME                   0

  1           LOAD_NAME                0 (Test)
              PUSH_NULL
              CALL                     0
              COPY                     1
              TO_BOOL
              POP_JUMP_IF_FALSE       11 (to L1)
              NOT_TAKEN
              POP_TOP
              LOAD_COMMON_CONSTANT    10 (False)
              COPY                     1
              TO_BOOL
              POP_JUMP_IF_TRUE         3 (to L2)
              NOT_TAKEN
      L1:     POP_TOP
              LOAD_COMMON_CONSTANT    10 (False)
      L2:     STORE_NAME               1 (x)
              LOAD_COMMON_CONSTANT     7 (None)
              RETURN_VALUE
